# research_project

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
trading_algorithm/: __init__.py  _base_combination_extremes.py  _base_data.py  _base_extremes.py  utils.py
trading_algorithm/__main__/: __main__.py  config.sample.json
trading_algorithm/extremes_storage/: wrapper.py
trading_algorithm/max_extremes/: _max_extremes.py  max_extremes.py
trading_algorithm/min_extremes/: _min_extremes.py  min_extremes.py
trading_algorithm/union_extremes/: _union_extremes.py  union_extremes.py
