[tool.poetry]
name = "trading-algorithm"
version = "0.1.0"
description = ""
authors = ["turilin <turilin@primatlab.com>"]
license = "BSD 3-Clause License"
readme = "README.md"
packages = [
    { include = "trading_algorithm" },
    { include = "visualisation" },
]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
plotly = "^5.22.0"
pydantic = "^2.7.1"
dash = "^2.17.0"
dash-bootstrap-components = "^1.6.0"
coremltools = "^8.0"
onnx-graphsurgeon = "^0.5.2"
onnxruntime-tools = "^1.7.0"

[tool.poetry.group.third_party.dependencies]
trading-math = { path = "trading_math" }

[tool.poetry.group.develop.dependencies]
black = "^24.4.2"
isort = {extras = ["colors"], version = "^5.13.2"}
pylint = "^3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target-version = ["py312"]
include = "\\.pyi?$"
